Améliorer le design du blog

--- a/Bootstrap/blog.html
+++ b/Bootstrap/blog.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-8">
+        <div class="col-sm-6 col-sm-offset-1">
           <p class="h3">Dernier article : Comment je me prépare à une entrevue...</p>
           <p class="text-muted small">Article publié par <a href="#">Jacques Berger</a> le 12 mars 2014.</p>
 
@@ -88,7 +88,7 @@
             échouant qu'on apprend le plus.
           </p>
         </div>
-        <div class="col-xs-4">
+        <div class="col-sm-4 col-sm-offset-1">
           <p class="h3">Articles précédents</p>
           <ul class="list-unstyled">
             <li><a href="#">Critique du livre : Coder proprement</a></li>
