--- a/Bootstrap/blog.html
+++ b/Bootstrap/blog.html
@@ -2,20 +2,20 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Blog</title>
-    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12 text-center page-header">
+        <div class="col-sm-12 text-center">
           <h1>Blog de Jacques Berger</h1>
           <p>Parce qu'il faut bien s'exercer à écrire...</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6 col-sm-offset-1">
+        <div class="col-sm-6 offset-sm-1">
           <p class="h3">Dernier article : Comment je me prépare à une entrevue...</p>
           <p class="text-muted small">Article publié par <a href="#">Jacques Berger</a> le 12 mars 2014.</p>
 
@@ -88,7 +88,7 @@
             échouant qu'on apprend le plus.
           </p>
         </div>
-        <div class="col-sm-4 col-sm-offset-1">
+        <div class="col-sm-4 offset-sm-1">
           <p class="h3">Articles précédents</p>
           <ul class="list-unstyled">
             <li><a href="#">Critique du livre : Coder proprement</a></li>
@@ -104,13 +104,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 text-center">
-          <p>&copy; Jacques Berger <strong>2014</strong></p>
+        <div class="col-sm-12 text-center">
+          <p>&copy; Jacques Berger <strong>2018</strong></p>
         </div>
       </div>
     </div>
 
-    <script src="vendor/js/jquery-1.11.0.min.js"></script>
-    <script src="vendor/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   </body>
 </html>
